kubernetes/kubernetes course/samples/14.ingress/banana.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
        - name: banana-container
          image: hashicorp/http-echo
          args:
            - "-text=banana"
          ports:
            - name: banana-port
              containerPort: 5678
          resources:
            limits:
              memory: 200Mi
              cpu: 200m
            requests:
              memory: 160Mi
              cpu: 60m

---
apiVersion: v1
kind: Service
metadata:
  name: banana-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: banana-port
      protocol: TCP
      name: http
  selector:
    app: banana
