kubernetes/kubernetes course/samples/14.ingress/orange.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orange-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orange
  template:
    metadata:
      labels:
        app: orange
    spec:
      containers:
        - name: orange-container
          image: hashicorp/http-echo
          args:
            - "-text=orange"
          ports:
            - name: orange-port
              containerPort: 5678
          resources:
            limits:
              memory: 200Mi
              cpu: 200m
            requests:
              memory: 160Mi
              cpu: 60m

---
apiVersion: v1
kind: Service
metadata:
  name: orange-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: orange-port
      protocol: TCP
      name: http
  selector:
    app: orange
