kubernetes/kubernetes course/samples/14.ingress/fruits-ingress.yml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fruits-ingress
spec:
  defaultBackend:
    service:
      name: orange-service
      port:
        number: 80
  rules:
    - host: apple.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apple-service
                port:
                  number: 80
    - host: banana.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banana-service
                port:
                  number: 80
